fix main.lyx compiling problem  [stuck limit]

--- a/thesis/Co - Features.lyx
+++ b/thesis/Co - Features.lyx
@@ -121,6 +121,24 @@ name "chapitre4"
 \end_inset
 
 
+\begin_inset Note Note
+status open
+
+\begin_layout Plain Layout
++Figures: all samples must 
+\begin_inset Quotes sld
+\end_inset
+
+figured
+\begin_inset Quotes srd
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
