--- a/thesis/SA - Arabic.lyx
+++ b/thesis/SA - Arabic.lyx
@@ -184,7 +184,8 @@ epigraph{
 \backslash
 raggedleft
 \backslash
-textit{أنا البحر في أعماقه الدرّ كامن   }}{
+textit{أَنا البَحرُ في أَحشائِهِ الدُرُّ كامِنٌ فَهَل سَأَلوا الغَوّاصَ
+ عَن صَدَفاتي}}{
 \backslash
 raggedright
 \backslash
