--- a/thesis/SA - Related_works.lyx
+++ b/thesis/SA - Related_works.lyx
@@ -114,7 +114,7 @@ pagenumbering{arabic}
 
 \begin_layout Standard
 \begin_inset Note Note
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset ERT
