--- a/thesis/flyleaf.lyx
+++ b/thesis/flyleaf.lyx
@@ -181,11 +181,11 @@ Advanced Search/Indexing in Holy-Quran
 
 \begin_layout Plain Layout
 \align center
-Chelli
+Assem
 \begin_inset space ~
 \end_inset
 
-Assem
+Chelli
 \begin_inset Newline newline
 \end_inset
 
@@ -194,7 +194,7 @@ Assem
 
 \begin_layout Plain Layout
 \align center
-2011 / 2012
+2011 / 2013
 \end_layout
 
 \end_inset
@@ -231,7 +231,7 @@ thispagestyle{empty}
 \series bold
 \shape smallcaps
 \size larger
-Ministère de l’enseignement supérieur et de la recherche scientifique
+Ministry of Higher Education and Scientific Research
 \begin_inset Newline newline
 \end_inset
 
@@ -266,7 +266,7 @@ Ministère de l’enseignement supérieur et de la recherche scientifique
 \series bold
 \shape smallcaps
 \size larger
-Mini project Of Magister 
+Thesis Of Magister 
 \end_layout
 
 \begin_layout Standard
@@ -292,17 +292,8 @@ Option : Mobile Destributed Computing (IRM)
 \align center
 
 \series bold
-\shape smallcaps
 \size larger
-Theme
-\end_layout
-
-\begin_layout Standard
-\align center
-
-\series bold
-\size larger
-Propostal of an Advanced Retrieval System for Quranic Documents
+Proposal of an Advanced Retrieval System for Quranic Documents
 \end_layout
 
 \begin_layout Standard
@@ -330,7 +321,7 @@ Propostal of an Advanced Retrieval System for Quranic Documents
 \begin_layout Plain Layout
 
 \series bold
-Réalisé By :
+Written By :
 \end_layout
 
 \end_inset
@@ -396,7 +387,7 @@ MR Taha ZERROUKI
 
 \begin_layout Standard
 \align center
-2010 / 2011
+2011/ 2013
 \end_layout
 
 \end_body
